// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderLeft renders 0 1`] = `
Array [
  .c0 {
  border-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders function 1`] = `
Array [
  .c0 {
  border-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders invalid theme path 1`] = `
Array [
  .c0 {
  border-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders negative number 1`] = `
Array [
  .c0 {
  border-left: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-left: July;
  }
}

@media April {
  .c0 {
    border-left: August;
  }
}

@media January {
  .c0 {
    border-left: September;
  }
}

@media April {
  .c0 {
    border-left: November;
  }
}

@media June {
  .c0 {
    border-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-left: July;
  }
}

@media April {
  .c0 {
    border-left: August;
  }
}

@media January {
  .c0 {
    border-left: September;
  }
}

@media April {
  .c0 {
    border-left: November;
  }
}

@media June {
  .c0 {
    border-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left: January;
  }
}

@media April {
  .c0 {
    border-left: December;
  }
}

@media January {
  .c0 {
    border-left: April;
  }
}

@media April {
  .c0 {
    border-left: May;
  }
}

@media June {
  .c0 {
    border-left: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left: January;
  }
}

@media April {
  .c0 {
    border-left: December;
  }
}

@media January {
  .c0 {
    border-left: April;
  }
}

@media April {
  .c0 {
    border-left: May;
  }
}

@media June {
  .c0 {
    border-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders postitive number 1`] = `
Array [
  .c0 {
  border-left: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders string 1`] = `
Array [
  .c0 {
  border-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeft renders valid theme path 1`] = `
Array [
  .c0 {
  border-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
